--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Resume: http://bit.ly/candasminareciresume
         <div class="container">
             <div class="content" id="content">
                 <h2>Candaş Minareci</h2>
-                <p>Developer</p>
+                <p>Software Developer</p>
                 <p>Turkey/Istanbul</p>
                 <ul class="contactLinks">
                     <li><a href="http://www.linkedin.com/in/candasminareci" target="_blank" rel="nofollow">linkedin</a></li>
