js kodlari icin main js referans gosterildi

--- a/index.html
+++ b/index.html
@@ -33,25 +33,6 @@ Resume: http://bit.ly/candasminareciresume
             </div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script type="text/javascript">
-            $(function() {
-                $('#content').append('<p>more? -> source code</p>');
-            });
-        </script>
-        <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-28839933-1']);
-            _gaq.push(['_setDomainName', 'candasminareci.com']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-                var ga = document.createElement('script');
-                ga.type = 'text/javascript';
-                ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0];
-                s.parentNode.insertBefore(ga, s);
-            })();
-        </script>    
+        <script src="main.js"></script>    
     </body>
 </html>
