backend yazisi duzenlendi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 hi[at]candasminareci[dot]com
 
-BackEnd Developer - Istanbul/Türkiye
+Backend Developer - Istanbul/Türkiye
 
 Resume: http://bit.ly/candasminareciresume
 
