--- a/index.html
+++ b/index.html
@@ -34,20 +34,24 @@ Resume: http://bit.ly/candasminareciresume
         <!-- / Favicon things / -->
         <meta charset="UTF-8">
         <title>Candaş Minareci</title>
+        <meta name="description" content="Backend developer Candaş MİNARECİ" />
+        <meta name="keywords" content="front-end developer, serkan azeri, freelance, freelance front-end developer, front-end, developer" />
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
         <div class="container">
             <div class="content" id="content">
-                <h2>Candaş Minareci</h2>
+                <img src="assets/images/candas-minareci.png" alt="Candaş Minareci" class="avatar"/>
+                <h2>Candaş MİNARECİ</h2>
                 <p>Software Developer</p>
                 <p>Turkey/Istanbul</p>
                 <ul class="contactLinks">
-                    <li><a href="http://www.linkedin.com/in/candasminareci" target="_blank" rel="nofollow">linkedin</a></li>
+                    <li><a href="https://about.me/candasm" target="_blank" rel="nofollow">Aboutme</a></li>
                     <li><a href="https://twitter.com/candasm" target="_blank" >twitter</a></li>
                     <li><a href="https://github.com/candasm" target="_blank" rel="nofollow">GitHub</a></li>
+                    <li><a href="http://www.linkedin.com/in/candasminareci" target="_blank" rel="nofollow">linkedin</a></li>
+                    <li><a href="http://bit.ly/candasminareciresume" target="_blank" rel="nofollow">Resume</a></li>
                 </ul>
-
             </div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
