default keywords silindi

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Resume: http://bit.ly/candasminareciresume
         <meta charset="UTF-8">
         <title>Candaş Minareci</title>
         <meta name="description" content="Backend developer Candaş MİNARECİ" />
-        <meta name="keywords" content="front-end developer, serkan azeri, freelance, freelance front-end developer, front-end, developer" />
+        <meta name="keywords" content="" />
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
