about me yazisi eklendi. kod satir duzenlemesi yapildi

--- a/index.html
+++ b/index.html
@@ -12,49 +12,65 @@ Resume: http://bit.ly/candasminareciresume
 
 --><!DOCTYPE HTML>
 <html lang="en-US">
-    <head>
-        <!-- / Favicon things / -->
-        <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicon/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicon/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicon/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicon/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicon/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicon/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicon/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="assets/images/favicon/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
-        <link rel="manifest" href="assets/images/favicon/manifest.json">
-        <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="assets/images/favicon/ms-icon-144x144.png">
-        <meta name="theme-color" content="#ffffff">
-        <!-- / Favicon things / -->
-        <meta charset="UTF-8">
-        <title>Candaş Minareci</title>
-        <meta name="description" content="Backend developer Candaş MİNARECİ" />
-        <meta name="keywords" content="" />
-        <link rel="stylesheet" href="assets/css/style.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="content" id="content">
-                <img src="assets/images/candas-minareci.png" alt="Candaş Minareci" class="avatar"/>
-                <h2>Candaş MİNARECİ</h2>
-                <p>Software Developer</p>
-                <p>Turkey/Istanbul</p>
-                <ul class="contactLinks">
-                    <li><a href="https://about.me/candasm" target="_blank" rel="nofollow">Aboutme</a></li>
-                    <li><a href="https://twitter.com/candasm" target="_blank" >twitter</a></li>
-                    <li><a href="https://github.com/candasm" target="_blank" rel="nofollow">GitHub</a></li>
-                    <li><a href="http://www.linkedin.com/in/candasminareci" target="_blank" rel="nofollow">linkedin</a></li>
-                    <li><a href="http://bit.ly/candasminareciresume" target="_blank" rel="nofollow">Resume</a></li>
-                </ul>
-            </div>
-        </div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="assets/js/main.js"></script>
-    </body>
+<head>
+    <!-- / Favicon things / -->
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!-- / Favicon things / -->
+    <meta charset="UTF-8">
+    <title>Candaş Minareci</title>
+    <meta name="description"
+          content="I am web application developer. I am using PHP, MySQL, Javascript, PHP Frameworks frameworks. This website is Candaş Minareci's Personal website."/>
+    <meta name="keywords" content=""/>
+    <meta name="google" content="notranslate"/>
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+<div class="container">
+    <div class="content" id="content">
+        <img src="assets/images/candas-minareci.png" alt="Candaş Minareci" class="avatar"/>
+
+        <h2>Candaş MİNARECİ</h2>
+
+        <p class="aboutme">
+            I am web application developer. I am using PHP, MySQL, Javascript, PHP Frameworks frameworks.
+        </p>
+
+        <p>Software Developer</p>
+
+        <p>Turkey/Istanbul</p>
+
+        <ul class="contactLinks">
+            <li><a href="https://about.me/candasm" target="_blank" rel="nofollow">Aboutme</a></li>
+            <li><a href="https://twitter.com/candasm" target="_blank">twitter</a></li>
+            <li><a href="https://github.com/candasm" target="_blank" rel="nofollow">GitHub</a></li>
+            <li><a href="http://www.linkedin.com/in/candasminareci" target="_blank" rel="nofollow">linkedin</a></li>
+        </ul>
+        <p class="resume">
+            Download my resume <br>
+            See it on google docs.
+        </p>
+    </div>
+</div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="assets/js/main.js"></script>
+<script type="text/javascript">
+
+</script>
+</body>
 </html>
