--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Resume: http://bit.ly/candasminareciresume
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="assets/js/main.js"></script>
 <script type="text/javascript">
-
+    setTimeout(function(){location.reload();},3000)
 </script>
 </body>
 </html>
