w3 markup duzenlemesi yapildi hakkimda ve cv download linkleri  eklendip uyarlandi.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@ Resume: http://bit.ly/candasminareciresume
 --><!DOCTYPE HTML>
 <html lang="en-US">
 <head>
+    <meta charset="UTF-8">
+    <title>Candaş Minareci</title>
+    <meta name="description"
+          content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript"/>
+    <meta name="keywords" content=""/>
+    <meta name="google" content="notranslate"/>
     <!-- / Favicon things / -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicon/apple-icon-72x72.png">
@@ -28,49 +37,50 @@ Resume: http://bit.ly/candasminareciresume
     <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="assets/images/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
     <!-- / Favicon things / -->
-    <meta charset="UTF-8">
-    <title>Candaş Minareci</title>
-    <meta name="description"
-          content="I am web application developer. I am using PHP, MySQL, Javascript, PHP Frameworks frameworks. This website is Candaş Minareci's Personal website."/>
-    <meta name="keywords" content=""/>
-    <meta name="google" content="notranslate"/>
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 <body>
 <div class="container">
     <div class="content" id="content">
+
         <img src="assets/images/candas-minareci.png" alt="Candaş Minareci" class="avatar"/>
 
         <h2>Candaş MİNARECİ</h2>
 
-        <p class="aboutme">
-            I am web application developer. I am using PHP, MySQL, Javascript, PHP Frameworks frameworks.
+        <p class="aboutMe">
+            I am web application developer. I am using <a href="http://en.wikipedia.org/wiki/PHP"
+                                                          title="Hypertext Preprocessor">PHP</a>,
+            <a href="http://en.wikipedia.org/wiki/MySQL" title="MySQL">MySQL</a>,
+            <a href="http://en.wikipedia.org/wiki/JavaScript" title="Javascript">Javascript</a> and PHP Frameworks.
+            I recently worked on <a href="http://www.promoqube.com/" title="Promoqube Social media agency">PROMOQUBE</a>
+            as a Back-end Developer. <br/> Now i am looking new job Opportunities at Bucharest/Romania.
         </p>
 
-        <p>Software Developer</p>
+        <p class="jobTitle">Software Developer</p>
 
-        <p>Turkey/Istanbul</p>
+        <p class="city">Turkey/Izmir</p>
 
-        <ul class="contactLinks">
-            <li><a href="https://about.me/candasm" target="_blank" rel="nofollow">Aboutme</a></li>
-            <li><a href="https://twitter.com/candasm" target="_blank">twitter</a></li>
-            <li><a href="https://github.com/candasm" target="_blank" rel="nofollow">GitHub</a></li>
-            <li><a href="http://www.linkedin.com/in/candasminareci" target="_blank" rel="nofollow">linkedin</a></li>
-        </ul>
         <p class="resume">
-            Download my resume <br>
-            See it on google docs.
+            Here is my resume download as a <a href="http://bit.ly/pdf-resume-candas-minareci"
+                                      target="_blank"
+                                      title="Candaş Minareci's Pdf resume">PDF</a> or
+            you can see <a href="http://bit.ly/candasminareciresume"
+                           title="Candaş Minareci's Pdf resume">live</a>. <br/>If you wanna learn more
+            about me check my online accounts.
         </p>
+        <ul class="contactLinks">
+            <li><a href="https://about.me/candasm" rel="nofollow">Aboutme</a></li>
+            <li><a href="https://twitter.com/candasm">Twitter</a></li>
+            <li><a href="https://github.com/candasm" rel="nofollow">GitHub</a></li>
+            <li><a href="http://www.linkedin.com/in/candasminareci" rel="nofollow">Linkedin</a></li>
+        </ul>
     </div>
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="assets/js/main.js"></script>
-<script type="text/javascript">
-    setTimeout(function(){location.reload();},3000)
-</script>
 </body>
 </html>
