sehir ismi duzeltildi

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Resume: http://bit.ly/candasminareciresume
 
         <p class="jobTitle">Software Developer</p>
 
-        <p class="city">Turkey/Izmir</p>
+        <p class="city">Izmir/Turkey</p>
 
         <p class="aboutMe">
             I am web application developer. I am using <a href="http://en.wikipedia.org/wiki/PHP"
