--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ Resume: http://bit.ly/candasminareciresume
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <title>Candaş Minareci</title>
     <meta name="description"
           content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript"/>
@@ -56,25 +57,26 @@ Resume: http://bit.ly/candasminareciresume
         <p class="city">Izmir/Turkey</p>
 
         <p class="aboutMe">
-            I am web application developer. I am using <a href="http://en.wikipedia.org/wiki/PHP"
+            Advanced web developer with 6 years of experience in structuring, developing and implementing interactive
+            websites. I have been working with <a href="http://en.wikipedia.org/wiki/PHP"
                                                           title="Hypertext Preprocessor">PHP</a>,
             <a href="http://en.wikipedia.org/wiki/MySQL" title="MySQL">MySQL</a>,
             <a href="http://en.wikipedia.org/wiki/JavaScript" title="Javascript">Javascript</a> and PHP Frameworks.
-            I recently worked on <a href="http://www.promoqube.com/" title="Promoqube Social media agency">PROMOQUBE</a>
-            as a Back-end Developer. <br/> Now i am looking new job Opportunities at Bucharest/Romania.
+            My former employee was <a href="http://www.promoqube.com/" title="Promoqube Social media agency">PROMOQUBE</a>,
+            where i was a Back-end Developer. <br/> I am looking now for new job opportunities in Bucharest/Romania.
         </p>
 
 
         <p class="resume">
-            Here is my resume download as a <a href="http://bit.ly/pdf-resume-candas-minareci"
+            Here is my resume, you can download it as a <a href="http://bit.ly/pdf-resume-candas-minareci"
                                                target="_blank"
                                                title="Candaş Minareci's Pdf resume">PDF</a> or
-            you can see <a href="http://bit.ly/candasminareciresume"
-                           title="Candaş Minareci's Pdf resume">live</a>. <br/>If you wanna learn more
-            about me check my online accounts.
+            you can check it <a href="http://bit.ly/candasminareciresume"
+                           title="Candaş Minareci's Pdf resume">here</a>. <br/>For more
+            details please check my online accounts.
         </p>
         <ul class="contactLinks">
-            <li><a href="https://about.me/candasm" rel="nofollow">Aboutme</a></li>
+            <li><a href="https://about.me/candasm" rel="nofollow">About.me</a></li>
             <li><a href="https://twitter.com/candasm">Twitter</a></li>
             <li><a href="https://github.com/candasm" rel="nofollow">GitHub</a></li>
             <li><a href="http://www.linkedin.com/in/candasminareci" rel="nofollow">Linkedin</a></li>
