--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Resume: http://bit.ly/candasminareciresume
     <title>Candaş Minareci</title>
     <meta name="description"
           content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript"/>
-    <meta name="keywords" content=""/>
+    <meta name="keywords" content="PHP developer, backend developer, back-end, backend, aws, javascript, facebook api, web application developer, MySQL, symfony2 developer, laravel developer, yii2 developer"/>
     <meta name="google" content="notranslate"/>
     <!-- / Favicon things / -->
     <meta name="msapplication-TileColor" content="#ffffff">
