link event tracking eklendi

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@ Resume: http://bit.ly/candasminareciresume
             details please check my online accounts.
         </p>
         <ul class="contactLinks">
-            <li><a href="https://about.me/candasm" rel="nofollow">About.me</a></li>
-            <li><a href="https://twitter.com/candasm">Twitter</a></li>
-            <li><a href="https://github.com/candasm" rel="nofollow">GitHub</a></li>
-            <li><a href="http://www.linkedin.com/in/candasminareci" rel="nofollow">Linkedin</a></li>
+            <li><a href="https://about.me/candasm" rel="nofollow" title="About.me Page">About.me</a></li>
+            <li><a href="https://twitter.com/candasm" title="Twitter Page">Twitter</a></li>
+            <li><a href="https://github.com/candasm" rel="nofollow" title="Github Page">GitHub</a></li>
+            <li><a href="http://www.linkedin.com/in/candasminareci" rel="nofollow" title="Linkedin Page">Linkedin</a></li>
         </ul>
     </div>
 </div>
