open graph meta taglari eklendi

--- a/index.html
+++ b/index.html
@@ -11,15 +11,35 @@ Backend Developer - Istanbul/Türkiye
 Resume: http://bit.ly/candasminareciresume
 
 --><!DOCTYPE HTML>
-<html lang="en-US">
-<head>
+<html lang="en-US" itemscope itemtype="http://schema.org/Person">
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# profile: http://ogp.me/ns/profile#">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
-    <title>Candaş Minareci</title>
+    <title>Candaş Minareci Back-end Developer</title>
     <meta name="description"
-          content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript"/>
+          content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript Web Developer."/>
     <meta name="keywords" content="PHP developer, backend developer, back-end, backend, aws, javascript, facebook api, web application developer, MySQL, symfony2 developer, laravel developer, yii2 developer"/>
     <meta name="google" content="notranslate"/>
+
+    <!-- Open Graph data -->
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="profile" />
+    <meta property="profile:first_name" content="Candaş"/>
+    <meta property="profile:last_name" content="Minareci"/>
+    <meta property="og:title" content="Candaş Minareci Back-end Developer" />
+    <meta property="og:description" content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript Web Developer."/>
+    <meta property="og:image" content="http://www.candasminareci.com/assets/images/candas-minareci-1200-630.jpg"/>
+    <meta property="og:link" content="http://www.candasminareci.com/"/>
+
+    <!-- Twitter Card Data-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@candasm">
+    <meta name="twitter:creator" content="@candasm">
+    <meta name="twitter:title" content="Candaş Minareci Back-end Developer">
+    <meta name="twitter:description" content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript Web Developer.">
+    <meta name="twitter:image" content="http://www.candasminareci.com/assets/images/candas-minareci-1200-630.jpg">
+
+
     <!-- / Favicon things / -->
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/images/favicon/ms-icon-144x144.png">
@@ -38,7 +58,7 @@ Resume: http://bit.ly/candasminareciresume
     <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicon/manifest.json">
-    <!-- / Favicon things / -->
+
     <link rel="stylesheet" href="assets/css/style.css">
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
