bosluklar duzenlendi aboutMe alani genisletildi

--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@ Resume: http://bit.ly/candasminareciresume
     <title>Candaş Minareci Back-end Developer</title>
     <meta name="description"
           content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript Web Developer."/>
-    <meta name="keywords" content="PHP developer, backend developer, back-end, backend, aws, javascript, facebook api, web application developer, MySQL, symfony2 developer, laravel developer, yii2 developer"/>
+    <meta name="keywords"
+          content="PHP developer, backend developer, back-end, backend, aws, javascript, facebook api, web application developer, MySQL, symfony2 developer, laravel developer, yii2 developer"/>
     <meta name="google" content="notranslate"/>
 
     <!-- Open Graph data -->
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="profile" />
+    <meta property="og:locale" content="en_US"/>
+    <meta property="og:type" content="profile"/>
     <meta property="profile:first_name" content="Candaş"/>
     <meta property="profile:last_name" content="Minareci"/>
-    <meta property="og:title" content="Candaş Minareci Back-end Developer" />
-    <meta property="og:description" content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript Web Developer."/>
+    <meta property="og:title" content="Candaş Minareci Back-end Developer"/>
+    <meta property="og:description"
+          content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript Web Developer."/>
     <meta property="og:image" content="http://www.candasminareci.com/assets/images/candas-minareci-1200-630.jpg"/>
     <meta property="og:link" content="http://www.candasminareci.com/"/>
 
@@ -36,7 +38,8 @@ Resume: http://bit.ly/candasminareciresume
     <meta name="twitter:site" content="@candasm">
     <meta name="twitter:creator" content="@candasm">
     <meta name="twitter:title" content="Candaş Minareci Back-end Developer">
-    <meta name="twitter:description" content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript Web Developer.">
+    <meta name="twitter:description"
+          content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript Web Developer.">
     <meta name="twitter:image" content="http://www.candasminareci.com/assets/images/candas-minareci-1200-630.jpg">
 
 
@@ -76,30 +79,31 @@ Resume: http://bit.ly/candasminareciresume
 
         <p class="city">Izmir/Turkey</p>
 
-        <p class="aboutMe">
-            Advanced web developer with 6 years of experience in structuring, developing and implementing interactive
-            websites. I have been working with <a href="http://en.wikipedia.org/wiki/PHP"
-                                                          title="Hypertext Preprocessor">PHP</a>,
-            <a href="http://en.wikipedia.org/wiki/MySQL" title="MySQL">MySQL</a>,
-            <a href="http://en.wikipedia.org/wiki/JavaScript" title="Javascript">Javascript</a> and PHP Frameworks.
-            My former employee was <a href="http://www.promoqube.com/" title="Promoqube Social media agency">PROMOQUBE</a>,
-            where i was a Back-end Developer. <br/> I am looking now for new job opportunities in Bucharest/Romania.
-        </p>
+        <div class="aboutMe">
+            <p>Advanced web developer with 6 years of experience in structuring, developing and implementing interactive
+                websites. I have been working with <a href="http://en.wikipedia.org/wiki/PHP"
+                                                      title="Hypertext Preprocessor">PHP</a>,
+                <a href="http://en.wikipedia.org/wiki/MySQL" title="MySQL">MySQL</a>,
+                <a href="http://en.wikipedia.org/wiki/JavaScript" title="Javascript">Javascript</a> and PHP Frameworks.
+                My former employee was <a href="http://www.promoqube.com/" title="Promoqube Social media agency">PROMOQUBE</a>,
+                where i was a Back-end Developer.</p>
 
-
+            <p>I am looking now for new job opportunities in Bucharest/Romania.</p>
+        </div>
         <p class="resume">
             Here is my resume, you can download it as a <a href="http://bit.ly/pdf-resume-candas-minareci"
-                                               target="_blank"
-                                               title="Candaş Minareci's Pdf resume">PDF</a> or
+                                                           target="_blank"
+                                                           title="Candaş Minareci's Pdf resume">PDF</a> or
             you can check it <a href="http://bit.ly/candasminareciresume"
-                           title="Candaş Minareci's Pdf resume">here</a>. <br/>For more
+                                title="Candaş Minareci's Pdf resume">here</a>. <br/>For more
             details please check my online accounts.
         </p>
         <ul class="contactLinks">
             <li><a href="https://about.me/candasm" rel="nofollow" title="About.me Page">About.me</a></li>
             <li><a href="https://twitter.com/candasm" title="Twitter Page">Twitter</a></li>
             <li><a href="https://github.com/candasm" rel="nofollow" title="Github Page">GitHub</a></li>
-            <li><a href="http://www.linkedin.com/in/candasminareci" rel="nofollow" title="Linkedin Page">Linkedin</a></li>
+            <li><a href="http://www.linkedin.com/in/candasminareci" rel="nofollow" title="Linkedin Page">Linkedin</a>
+            </li>
         </ul>
     </div>
 </div>
