--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Resume: http://bit.ly/candasminareciresume
     <meta property="og:description"
           content="This website is Web application developer Candaş Minareci's Personal website. PHP, MySQL, Javascript Web Developer."/>
     <meta property="og:image" content="http://www.candasminareci.com/assets/images/candas-minareci-1200-630.jpg"/>
-    <meta property="og:link" content="http://www.candasminareci.com/"/>
+    <meta property="og:url" content="http://www.candasminareci.com/"/>
 
     <!-- Twitter Card Data-->
     <meta name="twitter:card" content="summary_large_image">
