og type website'a cevirdim genis facebook paylas resim denemesi icin

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Resume: http://bit.ly/candasminareciresume
 
     <!-- Open Graph data -->
     <meta property="og:locale" content="en_US"/>
-    <meta property="og:type" content="profile"/>
+    <meta property="og:type" content="website"/>
     <meta property="profile:first_name" content="Candaş"/>
     <meta property="profile:last_name" content="Minareci"/>
     <meta property="og:title" content="Candaş Minareci Back-end Developer"/>
