JavaScript text duzenlemesi yapildi

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Resume: http://bit.ly/candasminareciresume
                 websites. I have been working with <a href="http://en.wikipedia.org/wiki/PHP"
                                                       title="Hypertext Preprocessor">PHP</a>,
                 <a href="http://en.wikipedia.org/wiki/MySQL" title="MySQL">MySQL</a>,
-                <a href="http://en.wikipedia.org/wiki/JavaScript" title="Javascript">Javascript</a> and PHP Frameworks.
+                <a href="http://en.wikipedia.org/wiki/JavaScript" title="JavaScript">JavaScript</a> and PHP Frameworks.
                 My former employee was <a href="http://www.promoqube.com/" title="Promoqube Social media agency">PROMOQUBE</a>,
                 where i was a Back-end Developer.</p>
 
