Update page information.
- Change email information.
- Change city very I am living.
- Change Company where I am currently working.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 | (_| (_| | | | | (_| | (_| \__ \ | | | | | | | | | | (_| | | |  __/ (__| |
  \___\__,_|_| |_|\__,_|\__,_|___/ |_| |_| |_|_|_| |_|\__,_|_|  \___|\___|_|
 
-hi[at]candasminareci[dot]com
+candas[at]minareci[dot]net
 
-Backend Developer - Istanbul/Türkiye
+Backend Developer - Bucharest/Romania
 
 Resume: http://bit.ly/candasminareciresume
 
@@ -75,18 +75,20 @@ Resume: http://bit.ly/candasminareciresume
 
         <p class="jobTitle">Software Developer</p>
 
-        <p class="city">Izmir/Turkey</p>
+        <p class="city">Bucharest/Romania</p>
 
         <div class="aboutMe">
-            <p>Advanced web developer with 6 years of experience in structuring, developing and implementing interactive
+            <p>Advanced web developer with 7 years of experience in structuring, developing and implementing interactive
                 websites. I have been working with <a href="http://en.wikipedia.org/wiki/PHP"
                                                       title="Hypertext Preprocessor">PHP</a>,
                 <a href="http://en.wikipedia.org/wiki/MySQL" title="MySQL">MySQL</a>,
                 <a href="http://en.wikipedia.org/wiki/JavaScript" title="JavaScript">JavaScript</a> and PHP Frameworks.
-                My former employee was <a href="http://www.promoqube.com/" title="Promoqube Social media agency">PROMOQUBE</a>,
-                where i was a Back-end Developer.</p>
-
-            <p>I am looking now for new job opportunities in Bucharest/Romania.</p>
+            </p>
+            <p>
+                I am currently working at <a href="http://www.pionix.ro/"
+                                             title="Pionix Marketing Solutions">Pionix</a> as Back-end Developer
+                for Ad Server Projects.
+            </p>
         </div>
         <p class="resume">
             Here is my resume, you can download it as a <a href="http://bit.ly/pdf-resume-candas-minareci"
